After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 730900 - Vimeo not work!
Vimeo not work!
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
git master
Other Linux
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2014-05-28 18:38 UTC by Enzzo
Modified: 2014-06-02 14:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vimeo: Set an external-url for results (1.54 KB, patch)
2014-05-30 21:57 UTC, Bastien Nocera
committed Details | Review

Description Enzzo 2014-05-28 18:38:53 UTC
It's search on vimeo, but dont play.
When I click on a video, aks me to report here =)
Arch linux with totem 3.12 and all optional dependences.
Comment 1 André Klapper 2014-05-29 12:53:42 UTC
Please provide steps to reproduce, click by click.
Comment 2 Enzzo 2014-05-30 18:35:05 UTC
Open Totem
Click on seach button
Type daft punk
Click on first video
( for example =D )
Comment 3 Bastien Nocera 2014-05-30 21:56:55 UTC
The quvi script for vimeo is still broken, but at least we get a proper error about that one.
Comment 4 Bastien Nocera 2014-05-30 21:57:10 UTC
Created attachment 277587 [details] [review]
vimeo: Set an external-url for results

This will allow GNOME Videos to use quvi directly to do the video
URL lookup, instead of counting on the vimeo plugin to do so.