vimeo: Set an external-url for results

This will allow GNOME Videos to use quvi directly to do the video
URL lookup, instead of counting on the vimeo plugin to do so.

https://bugzilla.gnome.org/show_bug.cgi?id=730900